Resolving path issues

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<path>/FlopOrNot</path>
+					<path>/</path>
 				</configuration>
 			</plugin>
 
