--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 /dist
 /tmp
 /out-tsc
+/target
 
 
 # IDEs and editors
 /.idea
 .project
+.pydevproject
 .classpath
 .c9/
 *.launch
@@ -19,3 +21,6 @@
 # System Files
 .DS_Store
 Thumbs.db
+
+#others
+__init__.py
